# UpcurvEd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  ARCHITECTURE.md  LICENSE  README.md  developer_guide.md  docker-compose.yaml  electron-builder.yml  package-lock.json  package.json  pytest.ini  requirements.txt
.github/workflows/: ci.yml  release-desktop.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  config.py  docker-entrypoint.sh  docker-shell.sh  firebase_app.py  gcs_utils.py  pyproject.toml
backend/agent/: code_sanitize.py  graph.py  graph_wo_rag_retry.py  minigraph.py  prompts.py  state.py
backend/agent/llm/: clients.py
backend/agent/models/: plan.py
backend/agent/nodes/: draft_code.py  log_failure.py  render.py  retrieve.py
backend/api/: main.py
backend/mcp/: podcast_logic.py  podcast_server.py  quiz_logic.py  quiz_server.py  story_video_logic.py  widget_logic.py
backend/rag_client/: cloud_retriever.py  formatting.py  retriever.py
backend/rag_service/: Dockerfile  __init__.py  main.py
backend/runner/: job_runner.py
backend/utils/: app_logging.py  failure_log.py  helpers.py
deploy/: CONFIG.md  README.md  nginx.conf
deploy/deploy_images/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  config.py  pyproject.toml
desktop/: README.md  main.cjs  preload.cjs  requirements-desktop.txt
desktop/icons/: icon.icns
desktop/scripts/: prepare-python-runtime.cjs
docs/: Application_Design_Document.md  DATA_VERSIONING.md  PHASE_5_DOCKER_NOTES.md
frontend/: .env.example  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/landing_snippets/: demo2_langgraph.mov  demo3_bellman.mov
frontend/src/: App.tsx  firebase.ts  index.css  vite-env.d.ts
frontend/src/components/: MediaPlayer.tsx  Sidebar.tsx
frontend/src/debug/: mockWidgetHtml.ts
frontend/src/lib/: analytics.ts  api.ts  runtime.ts  secureKeys.ts  utils.ts  widgetRuntime.ts
frontend/src/pages/: Chat.tsx  Landing.tsx  Login.tsx  Settings.tsx
frontend/src/types/: index.ts
rag/: .dockerignore  .env.example  Dockerfile  README.md  create_vector_db.py  docker-entrypoint.sh  preprocess_rag_smart.py  pyproject.toml  query_db.py
tests/: conftest.py  test_generate_pipeline.py
tests/integration/: test_additional_coverage.py  test_api_additional.py  test_api_comprehensive.py  test_api_coverage_boost.py  test_api_final_coverage.py  test_api_generate.py  test_api_health.py  test_api_massive_coverage.py  test_api_mcp.py  test_api_more_endpoints.py  test_comprehensive_coverage.py  test_massive_statement_coverage.py  test_targeted_comprehensive.py  test_targeted_coverage.py
tests/system/: __init__.py  test_additional_e2e.py  test_additional_system_coverage.py  test_comprehensive_coverage.py  test_massive_e2e.py  test_massive_statement_coverage.py  test_massive_system_coverage.py  test_more_e2e.py  test_targeted_comprehensive.py  test_targeted_coverage.py  test_video_pipeline.py
tests/unit/: test_code_sanitize.py  test_comprehensive_coverage.py  test_config.py  test_coverage_improvements.py  test_delete_account.py  test_edit_feature.py  test_firebase_app.py  test_gcs_utils.py  test_graph.py  test_job_runner.py  test_llm_comprehensive.py  test_main_api.py  test_massive_statement_coverage.py  test_massive_unit_coverage.py  test_minigraph.py  test_podcast.py  test_podcast_utils.py  test_prompts.py  test_quiz_parsing.py  test_rag_and_failure_logs.py  test_rag_formatting.py  test_state.py  test_targeted_coverage.py  test_ultra_massive_unit_coverage.py  test_utils.py
