[project]
name = "upcurved-backend"
version = "0.1.0"
description = "FastAPI backend for UpcurvEd"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",

  # Manim + voiceover
  "manim>=0.19.0",
  "manim-voiceover[gtts]>=0.3.7",
  "gTTS>=2.5.1",
  "setuptools>=68,<81",

  # Agent
  "langgraph>=0.6.10",
  "tiktoken",
  "chromadb>=0.4.0",
  "httpx>=0.27.0",

  # LLM SDKs
  "anthropic>=0.29.0",
  "google-generativeai>=0.7.2",

  # Runtime helpers / integrations
  "mcp>=1.2.0",
  "langdetect>=1.0.9",
  "mutagen>=1.47.0",
  "firebase-admin>=6.5.0",
  "google-cloud-firestore>=2.16.0",
  "google-cloud-storage>=2.18.0",
  "json5>=0.9.24",
  "fastmcp>=0.1.0",
  "playwright>=1.52.0",
]

[dependency-groups]
# Dev-only deps (not included in prod image)
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pre-commit",
]

# Infrastructure / release tooling formerly kept in requirements.txt
infra = [
  "pulumi>=3.0.0,<4.0.0",
  "pulumi-gcp>=7.0.0,<8.0.0",
  "pulumi-docker>=4.0.0,<5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"
