[project]
name = "deploy-images"
version = "0.1.0"
description = "Pulumi infrastructure for building and pushing Docker images to GCP Artifact Registry"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-gcp>=7.0.0,<8.0.0",
    "pulumi-docker-build>=0.0.1",
]
